# Autolytiq-desk-studio

./: .commitlintrc.json  .dockerignore  .env  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  .replit  AGENT_WORKFLOW_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_RULES.md  ATOMIC_DEAL_CREATION_GUIDE.md  CALCULATION_ISSUES_CRITICAL.md  CLAUDE.md  COMPLETE_MIGRATION_PLAN.md  CRITICAL_BREAKING_POINTS.md  CUSTOMER_MODULE_INTEGRATION_COMPLETE.md  CUSTOMER_SERVICE_MIGRATION_EXAMPLES.md  DATABASE_MIGRATION_COMPLETE.md  DATABASE_MIGRATION_STATUS_REPORT.md  DATABASE_SCHEMA_FIXES.md  DEAL_CALCULATION_BULLETPROOF_DELIVERY.md  DEAL_CREATION_BULLETPROOF_SUMMARY.md  DEAL_ROUTES_MIGRATION_REPORT.md  DEAL_ROUTES_MIGRATION_SUMMARY.md  DEPLOYMENT_SAFETY.md  DEPLOY_FIXES.md  DESIGN_SYSTEM_OVERVIEW.md  Dockerfile  EMAIL_FEATURES_COMPLETE.md  EMAIL_MODULE_MIGRATION_COMPLETE.md  EMAIL_ROUTES_MIGRATION_REPORT.md  EMAIL_ROUTES_QUICK_REFERENCE.md  EMAIL_SYSTEM_FIXES_SUMMARY.md  EMAIL_UI_GUIDE.md  FRONTEND_CONSOLIDATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATE_EMAIL_MODULE.md  LOCAL_TAX_IMPLEMENTATION_SUMMARY.md  (+86 more)
services/tax-engine-rs/: Cargo.toml  README.md
services/tax-engine-rs/src/: calculator.rs  deal_calculator.rs  deal_types.rs  finance.rs  lease.rs  lib.rs  state_rules.rs  types.rs
services/udc-engine/: Cargo.toml
services/udc-engine/examples/: basic_deal.rs
services/udc-engine/rules/finance/: AK.json  AL.json  AR.json  AZ.json  CA.json  CO.json  CT.json  DE.json  FL.json  GA.json  HI.json  IA.json  ID.json  IL.json  IN.json  KS.json  KY.json  LA.json  MA.json  MD.json  ME.json  MI.json  MN.json  MO.json  MS.json  MT.json  NC.json  ND.json  NE.json  NH.json  NJ.json  NM.json  NV.json  NY.json  OH.json  OK.json  OR.json  PA.json  RI.json  SC.json  (+10 more)
services/udc-engine/rules/lease/: AK.json  AL.json  AR.json  AZ.json  CA.json  CO.json  CT.json  DE.json  FL.json  GA.json  HI.json  IA.json  ID.json  IL.json  IN.json  KS.json  KY.json  LA.json  MA.json  MD.json  ME.json  MI.json  MN.json  MO.json  MS.json  MT.json  NC.json  ND.json  NE.json  NH.json  NJ.json  NM.json  NV.json  NY.json  OH.json  OK.json  OR.json  PA.json  RI.json  SC.json  (+10 more)
services/udc-engine/src/: engine.rs  lib.rs  wasm.rs
services/udc-engine/src/algorithms/: amortization.rs  lease.rs  mod.rs  tax.rs
services/udc-engine/src/phases/: mod.rs  p0_normalize.rs  p1_mode_routing.rs  p2_jurisdiction.rs  p3_profiles.rs  p4_tax_cipher.rs  p5_structure.rs  p6_cashflow.rs  p7_finalize.rs
services/udc-engine/src/types/: deal.rs  deal_input.rs  mod.rs  money.rs  output.rs  (+4 more)
services/udc-engine/tests/: integration_tests.rs
(+1148 files in other folders)
